--- a/index.html
+++ b/index.html
@@ -7,14 +7,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+    <section class="intro-section">
+        <div class="intro-text">
+            <h1><span class="orange-color">Let’s Help</span> Those Who Are</h1>
+            <h1>More In Need</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                falli</p>
+            <p>deterruisset. No duo populo animal noluisse, enim</p>
+            <a class="donate-btn click-btn" href="">Donate Now</a>
+        </div>
+    </section>
+
+
+    <!-------------------------------------------<(Donate Today)>----------------------------------------->
+    <div class="donate-money">
+        <h1>Donate Today</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+        <p>deterruisset. No duo populo animal noluisse, enim</p>
+
+
+        <section>
+            <div class="select-amount">
+                <div class="option-all">
+                    <h2>100tk</h2>
+                </div>
+                <div class="option-select">
+                    <h2>200tk</h2>
+                </div>
+                <div class="option-all">
+                    <h2>500tk</h2>
+                </div>
+                <div class="option-all">
+                    <h2>1000tk</h2>
+                </div>
+                <div class="option-all">
+                    <h2>5000tk</h2>
+                </div>
+            </div>
+        </section>
 
 
 
+
+        <input class="your-amount" type="text" placeholder="Other Amount (Taka)" />
+        <a href="#" class="donate-btn click-btn">Donate Now</a>
+    </div>
+
+    <!-------------------------------------------<(Our Donate Plan)>----------------------------------------->
+    <section class="donate-item">
+        <h1>Our Donate Plan</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+        <p>deterruisset. No duo populo animal noluisse, enim</p>
+
+        <div class="plan-items">
+            <div class="food-plan">
+                <img src="./icons/food.png" alt="This is plan 1 (food plan)" />
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="shelter-plan">
+                <img src="./icons/shelter.png" alt="This is plan 2 shelter plan)" />
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="education-plan">
+                <img src="./icons/Frame-1.png" alt="This is plan 3 (education plan)" />
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-----------------------------------------<(Subscribe Section)>--------------------------------------->
+    <section class="subscribe-section">
+        <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+        <p>deterruisset. No duo populo animal noluisse, enim</p>
+
+        <div class="subscribe-class">
+            <input class="enter-email" type="text" placeholder="Email" />
+            <a class="donate-btn click-btn" href="#">Subscribe</a>
+        </div>
+    </section>
 </body>
+
+<!------------------------------------------------<(Footer)>----------------------------------------------->
+<footer>
+    <h1>Be kind</h1>
+    <p>Copyright © assignment-01-donate-today
+        2022</p>
+</footer>
 
 </html>
