--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     sint. Velit officia consequat duis enim velit mollit.</p>
             </div>
             <div class="shelter-plan">
-                <img src="./icons/shelter.png" alt="This is plan 2 shelter plan)" />
+                <img src="./icons/shelter.png" alt="This is plan 2 (shelter plan)" />
                 <h3>Shelter for a family</h3>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim velit mollit.</p>
@@ -81,6 +81,26 @@
                     duis enim velit mollit.</p>
             </div>
         </div>
+    </section>
+    <!---------------------<(Help- Urgent Flood Relief in Sylhet Bangladesh)>----------------------------->
+    <section class="donate">
+        <h1>Help- Urgent Flood Relief in Sylhet Bangladesh</h1>
+
+        <div class="plan">
+            <div class="food">
+                <img src="images/donation0.jpg" alt="Food plan for Sylhet" />
+                <h3>Food for a family</h3>
+            </div>
+            <div class="shelter">
+                <img src="images/donation2.jpg" alt="Shelter plan for Sylhet" />
+                <h3>Shelter for a family</h3>
+            </div>
+            <div class="education">
+                <img src="images/donation3.jpg" alt="Education pla shelter" />
+                <h3>Education for a child</h3>
+            </div>
+        </div>
+        <a class="donate-btn click-btn" href="#">How to Contribute?</a>
     </section>
     <!-----------------------------------------<(Subscribe Section)>--------------------------------------->
     <section class="subscribe-section">
